--- a/new-training/index.html
+++ b/new-training/index.html
@@ -5,6 +5,18 @@
     <title>Document</title>
 </head>
 <body>
+   <header class="header">
+    Header 10%
+    </header>
+   <section class="banner">
+    Banner 15%
+    </section> 
+   <main class="content">
+    Content 55%
+    </main>
+    <footer class="footer">
+        footer 20%
+    </footer>
     
     
 </body>
