--- a/new-training/index.html
+++ b/new-training/index.html
@@ -1,23 +1,33 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Left Right Layout</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <header class="header">
-    Header 10%
-    </header>
-   <section class="banner">
-    Banner 15%
-    </section> 
-   <main class="content">
-    Content 55%
-    </main>
-    <footer class="footer">
-        footer 20%
-    </footer>
-    
-    
+
+  <header class="header">
+    Header
+  </header>
+
+  <section class="banner">
+    Banner
+  </section>
+
+  <main class="content">
+    <aside class="sidebar">
+      Sidebar (30%)
+    </aside>
+
+    <section class="main-area">
+      Main Content (70%)
+    </section>
+  </main>
+
+  <footer class="footer">
+    Footer
+  </footer>
+
 </body>
 </html>
