--- a/new-training/index.html
+++ b/new-training/index.html
@@ -1,33 +1,35 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Left Right Layout</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <header class="header">
-    Header
-  </header>
-
-  <section class="banner">
-    Banner
-  </section>
-
-  <main class="content">
-    <aside class="sidebar">
-      Sidebar (30%)
-    </aside>
-
-    <section class="main-area">
-      Main Content (70%)
+    <header class="header">
+        <div class="logo">Logo Here</div>
+        <nav class="nav">
+            <a href="#">Home</a>
+             <a href="#">About</a>
+              <a href="#">Servise</a>
+               <a href="#">Contact</a>
+        </nav>
+    </header>
+    <section class="banner">
+       Banner section
     </section>
-  </main>
+    <main class="content">
+        <aside class="sidebar">
+            sidebar 
+        </aside>
+     <section class="main-area">
+        Main Content 
+     </section> 
+        
+    </main>
+    
+    <footer class="footer">Footer</footer>
 
-  <footer class="footer">
-    Footer
-  </footer>
 
 </body>
 </html>
