--- a/new-training/index.html
+++ b/new-training/index.html
@@ -1,45 +1,81 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Humberger Menu</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simple Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header class="header">
-        <div class="logo">Logo Here</div>
+  <!-- HEADER -->
+  <header class="header">
+    <div class="logo">
+      <img src="images/logo.svg" alt="Company Logo">
+    </div>
 
-        <input type="checkbox" id="menu-toggle">
+    <nav class="nav">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-        <label for="menu-toggle" class="menu-icon">
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>
+  <!-- HERO -->
+  <section class="hero" id="home">
+    <h1>We Build Modern Websites</h1>
+    <p>Clean, responsive and professional designs</p>
+    <a href="#contact" class="btn">Get Started</a>
+  </section>
 
-        <nav class="nav">
-            <a href="#">Home</a>
-             <a href="#">About</a>
-              <a href="#">Servise</a>
-               <a href="#">Contact</a>
-        </nav>
-    </header>
-    <section class="banner">
-       Banner section
-    </section>
-    <main class="content">
-        <aside class="sidebar">
-            sidebar 
-        </aside>
-     <section class="main-area">
-        Main Content 
-     </section> 
-        
-    </main>
-    
-    <footer class="footer">Footer</footer>
+  <!-- ABOUT -->
+  <section class="about" id="about">
+    <h2>About Us</h2>
+    <p>
+      We are a creative team focused on building modern and responsive websites
+      using the latest web technologies.
+    </p>
+  </section>
 
+  <!-- SERVICES -->
+  <section class="services" id="services">
+    <h2>Our Services</h2>
+
+    <div class="service-boxes">
+      <div class="service">
+        <h3>Web Design</h3>
+        <p>Clean and modern UI designs.</p>
+      </div>
+
+      <div class="service">
+        <h3>Development</h3>
+        <p>Fast and scalable websites.</p>
+      </div>
+
+      <div class="service">
+        <h3>Responsive</h3>
+        <p>Perfect on all devices.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section class="contact" id="contact">
+    <h2>Contact Us</h2>
+
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name">
+      <input type="email" placeholder="Your Email">
+      <textarea placeholder="Your Message"></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <p>© 2026 My Company. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
