--- a/new-training/index.html
+++ b/new-training/index.html
@@ -1,81 +1,75 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- HEADER -->
-  <header class="header">
+    <header class="header">
+    
+   
     <div class="logo">
-      <img src="images/logo.svg" alt="Company Logo">
+        <img src="image/amazon-logo.svg" alt="mylogo">
     </div>
-
     <nav class="nav">
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <!-- HERO -->
-  <section class="hero" id="home">
-    <h1>We Build Modern Websites</h1>
-    <p>Clean, responsive and professional designs</p>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#contacts">Contacts</a>
+</nav>
+</header>
+<section class="hero" id="home">
+    <h1>We Build a Morden Websites</h1>
+    <p>Clear, responsive and professional desiegn</p>
     <a href="#contact" class="btn">Get Started</a>
-  </section>
+</section>
 
-  <!-- ABOUT -->
   <section class="about" id="about">
-    <h2>About Us</h2>
-    <p>
-      We are a creative team focused on building modern and responsive websites
-      using the latest web technologies.
-    </p>
+    <h1>About Us</h1>
+    <p>we are a creative Lorem ipsum dolor sit amet consectetur, 
+        adipisicing elit. Tempore vero voluptatem animi ratione odio pariatur ea enim, ut facilis amet recusandae eveniet ipsum quibusdam maxime repellendus, quod expedita earum blanditiis.we are a creative Lorem ipsum dolor sit amet consectetur, 
+        adipisicing elit. Tempore vero voluptatem animi ratione odio pariatur ea enim, ut facilis amet recusandae eveniet ipsum quibusdam maxime repellendus, quod expedita earum blanditiis.we are a creative Lorem ipsum dolor sit amet consectetur, 
+        adipisicing elit. Tempore vero voluptatem animi ratione odio pariatur ea enim, ut facilis amet recusandae eveniet ipsum quibusdam maxime repellendus, quod expedita earum blanditiis.we are a creative Lorem ipsum dolor sit amet consectetur, 
+        adipisicing elit. Tempore vero voluptatem animi ratione odio pariatur ea enim, ut facilis amet re</p>
   </section>
+   <section class="services" id="services">
+     <h1>Our services</h1>
 
-  <!-- SERVICES -->
-  <section class="services" id="services">
-    <h2>Our Services</h2>
+     <div class="services-boxes">
+        <div class="service">
+            <h3>web Design</h3>
+            <p>Clear and mordern UI design.</p>
+        </div>
+        <div class="service">
+            <h3>Development</h3>
+            <p>fast and Scalable websites.</p>
+        </div>
+        <div class="service">
+            <h3>responsive</h3>
+            <p>perfect on all devices.</p>
+            <img src="image/amazon-logo.svg" alt="">
 
-    <div class="service-boxes">
-      <div class="service">
-        <h3>Web Design</h3>
-        <p>Clean and modern UI designs.</p>
-      </div>
+        </div>
+</div>
+ </section>
 
-      <div class="service">
-        <h3>Development</h3>
-        <p>Fast and scalable websites.</p>
-      </div>
-
-      <div class="service">
-        <h3>Responsive</h3>
-        <p>Perfect on all devices.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- CONTACT -->
-  <section class="contact" id="contact">
-    <h2>Contact Us</h2>
-
+ <section class="contact" id="contact">
+    <h2>Contact us</h2>
+    
     <form class="contact-form">
-      <input type="text" placeholder="Your Name">
-      <input type="email" placeholder="Your Email">
-      <textarea placeholder="Your Message"></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+<input type="text" placeholder="Your name">
+<input type="email" placeholder="Your email">
+<textarea placeholder="Send message"></textarea>
+</form>
+   <button type="submit">Send message </button>
+ </section>
+ <footer class="footer">
+    <p>@ 2026 mYcompany. All rights reserved</p>
+ </footer>
 
-  <!-- FOOTER -->
-  <footer class="footer">
-    <p>© 2026 My Company. All rights reserved.</p>
-  </footer>
+ 
+  
 
 </body>
 </html>
