--- a/new-training/index.html
+++ b/new-training/index.html
@@ -40,15 +40,17 @@
         <div class="service">
             <h3>web Design</h3>
             <p>Clear and mordern UI design.</p>
+            <img src="image/evernote-color-svgrepo-com.svg" alt="just for text">
         </div>
         <div class="service">
             <h3>Development</h3>
             <p>fast and Scalable websites.</p>
+            <img src="image/shopify-color-svgrepo-com.svg" alt="just for text">
         </div>
         <div class="service">
             <h3>responsive</h3>
             <p>perfect on all devices.</p>
-            <img src="image/amazon-logo.svg" alt="">
+            <img src="image/android-color-svgrepo-com.svg" alt="just for text">
 
         </div>
 </div>
@@ -71,5 +73,82 @@
  
   
 
+ <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header class="header">
+    
+   
+    <div class="logo">
+        <img src="image/amazon-logo.svg" alt="mylogo">
+    </div>
+    <nav class="nav">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#contacts">Contacts</a>
+</nav>
+</header>
+<section class="hero" id="home">
+    <h1>We Build a Morden Websites</h1>
+    <p>Clear, responsive and professional desiegn</p>
+    <a href="#contact" class="btn">Get Started</a>
+</section>
+
+  <section class="about" id="about">
+    <h1>About Us</h1>
+    <p>we are a creative Lorem ipsum dolor sit amet consectetur, 
+        adipisicing elit. Tempore vero voluptatem animi ratione odio pariatur ea enim, ut facilis amet recusandae eveniet ipsum quibusdam maxime repellendus, quod expedita earum blanditiis.we are a creative Lorem ipsum dolor sit amet consectetur, 
+        adipisicing elit. Tempore vero voluptatem animi ratione odio pariatur ea enim, ut facilis amet recusandae eveniet ipsum quibusdam maxime repellendus, quod expedita earum blanditiis.we are a creative Lorem ipsum dolor sit amet consectetur, 
+        adipisicing elit. Tempore vero voluptatem animi ratione odio pariatur ea enim, ut facilis amet recusandae eveniet ipsum quibusdam maxime repellendus, quod expedita earum blanditiis.we are a creative Lorem ipsum dolor sit amet consectetur, 
+        adipisicing elit. Tempore vero voluptatem animi ratione odio pariatur ea enim, ut facilis amet re</p>
+  </section>
+   <section class="services" id="services">
+     <h1>Our services</h1>
+
+     <div class="services-boxes">
+        <div class="service">
+            <h3>web Design</h3>
+            <p>Clear and mordern UI design.</p>
+            <img src="image/evernote-color-svgrepo-com.svg" alt="just for text">
+        </div>
+        <div class="service">
+            <h3>Development</h3>
+            <p>fast and Scalable websites.</p>
+            <img src="image/shopify-color-svgrepo-com.svg" alt="just for text">
+        </div>
+        <div class="service">
+            <h3>responsive</h3>
+            <p>perfect on all devices.</p>
+            <img src="image/android-color-svgrepo-com.svg" alt="just for text">
+
+        </div>
+</div>
+ </section>
+
+ <section class="contact" id="contact">
+    <h2>Contact us</h2>
+    
+    <form class="contact-form">
+<input type="text" placeholder="Your name">
+<input type="email" placeholder="Your email">
+<textarea placeholder="Send message"></textarea>
+</form>
+   <button type="submit">Send message </button>
+ </section>
+ <footer class="footer">
+    <p>@ 2026 mYcompany. All rights reserved</p>
+ </footer>
+
+ 
+  
+
+</body>
+</html>
 </body>
 </html>
